Fixed footer whitespace

--- a/google-homepage/style.css
+++ b/google-homepage/style.css
@@ -10,6 +10,7 @@ body {
   font-family: arial, sans-serif;
   font-size: 13px;
   color: rgba(0, 0, 0, 0.83);
+  height: 100%;
 }
 
 #wrapper {
@@ -72,12 +73,12 @@ main {
 }
 
 #center-container {
-  margin-bottom: 200px;
   padding: 1.7rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
+  width: 100%;
 }
 
 #center-container > div {
@@ -89,7 +90,6 @@ main {
   display: flex;
   justify-content: space-between;
   border: 1px rgba(223, 225, 229, 1) solid;
-  width: 10%;
   border-radius: 9999px;
   max-width: 596px;
 }
@@ -151,7 +151,6 @@ footer {
   color: rgba(0, 0, 0, 0.55);
   display: flex;
   flex-direction: column;
-  min-height: 10%;
   background: rgba(0, 0, 0, 0.05);
 }
 
